jellyfin/ingress-jackett.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: jellyfin
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - secretName: letsencrypt-wildcard-cert-michaelthomson.dev
      hosts:
        - jackett.michaelthomson.dev
  rules:
    - host: jackett.michaelthomson.dev
      http:
        paths:
        - backend:
            service:
              name: jackett
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
